# commit-viz

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  commit-viz.yaml.example  slf4j.yaml
.claude/: settings.local.json
analysis/flask/: config.yaml
analysis/neovim/: config.yaml
analysis/requests/: config.yaml
analysis/ruff/: config.yaml
analysis/slf4j/: config.yaml
analysis/spring-framework/: config.yaml
collector/: pyproject.toml
collector/src/commit_viz/: cli.py  config.py  models.py  output.py
collector/src/commit_viz/sources/: change_flow.py  clone.py  git.py  github.py  jira.py  stats.py  waste.py
renderer/: Cargo.toml
renderer/src/: change_flow_charts.rs  config.rs  data.rs  layout.rs  main.rs  render.rs  report.rs  stats.rs  text.rs  timeline.rs  waste_charts.rs
schema/: commit-viz.schema.json
scripts/: doctor.sh  wizard.sh
