[project]
name = "commit-viz"
version = "0.1.0"
description = "Collect git, GitHub Actions, and Jira data for commit cycle time visualization"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
commit-viz = "commit_viz.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commit_viz"]
