[project]
name = "commit-viz"
version = "0.1.0"
description = "Collect git, GitHub Actions, and Jira data for commit cycle time visualization"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "gitpython>=3.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
commit-viz = "commit_viz.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/commit_viz"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "C4",     # flake8-comprehensions
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "PIE",    # flake8-pie
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # line length handled by formatter
    "TCH",    # type-checking imports — adds complexity without benefit here
]

[tool.ruff.lint.isort]
known-first-party = ["commit_viz"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["commit_viz"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0
