[package]
name = "commit-viz-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny-skia = "0.11"
chrono = { version = "0.4", features = ["serde"] }
fontdue = "0.9"
rayon = "1.10"
